envoy/grpc-linux/envoy.yaml
static_resources:
  listeners:
  - name: listener_http
    address: { socket_address: { address: 0.0.0.0, port_value: 10000 }}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            virtual_hosts:
            - name: minigrpc_http
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: minigrpc_http }
  - name: listener_https
    address: { socket_address: { address: 0.0.0.0, port_value: 10001 }}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            virtual_hosts:
            - name: minigrpc_https
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: minigrpc_https }
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            alpn_protocols: [ "h2,http/1.1" ]
            tls_certificates:
            - certificate_chain: { filename: /https/cert.crt }
              private_key: { filename: /https/cert.key }
  clusters:
  - name: minigrpc_http
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: minigrpc_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: minigrpc,  port_value: 5022 }}
  - name: minigrpc_https
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: minigrpc_https
      endpoints:
      - lb_endpoints:
        - endpoint:
            address: { socket_address: { address: minigrpc, port_value: 5023 }}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
